# programs

./: .gitignore  .gitmodules  README.md
collage/C/: bubble.c  selection.c  try.c  try.py
collage/collageDSA/: array  array.cpp
collage/cpp/: 3.cpp  4.cpp  8.cpp
college/C/: insertion.c  structure.c
college/cpp/: 1  1.cpp  2.cpp  5.cpp  6.cpp  7.cpp  main.cpp
college/nlp/: pyproject.toml
college/nlp/linguistic_analysis/: main.py
college/nlp/n_gram/: main.cpp  main.ipynb  temp.txt
college/nlp/tokenization/: main.cpp  main.ipynb  main_no_stl.cpp
followAlong/NodeCrashCourse/: fsDemo.js  index.js  package-lock.json  package.json  postController.js  server.js  server2.js  test.txt  utils.js
followAlong/flappy_ai/: .gitignore  hyperparams.yaml  main.py  pyproject.toml
followAlong/nikeClone/: package-lock.json  package.json
followAlong/sockets/: main.py  server.py
followAlong/ugit/: .gitignore  pyproject.toml
followAlong/zig.guide/: hello_world.zig
mine/asm/: .gitignore  exit.asm
mine/dsa/: hanoi  hanoi.cpp
mine/pytorch-deep-learning-notebooks/: 01.ipynb  01_exercise.ipynb  requirements.txt
mine/resume/: .gitignore  Tushya_Gupta_Software_Engineer.tex  main.tex
projects/Path finder prototype/: code_to_coordiantes.py  cord_detail.txt  create_map.py  main.py  read map.py
projects/amazonWebscrapper/: README.md  webscrapper.ipynb
projects/arduino/: .gitignore
projects/bangaloreDashboard/: README.md
school/: 12-02-22.py  123.txt  18-01-22.py
school/10-02-22/: 1.py  2.py  3.py
school/11-02-22/: 1.py  2.py  3.py  4.py
(+441 files in other folders)
