[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "nbconvert>=7.16.6",
    "nltk>=3.9.1",
    "notebook>=7.4.5",
    "pandoc>=2.4",
    "pip>=25.2",
    "rich>=14.1.0",
    "spacy>=3.8.7",
]
